Fix incorrect icon alignment in about-us block

--- a/index.sass
+++ b/index.sass
@@ -211,15 +211,18 @@
     margin: 32px 0 0 10px
   &__icon-list-item
     display: inline-block
-    width: 126px
+    width: 170px
     margin: 0
     padding: 0 62px 0 62px
+    vertical-align: top
   &__img
     width: 122px
   &__text
+    display: inline-block
     font-size: 1rem
     padding: 6px 0 0 0
     opacity: 0.7
+    height: 110px
   &__carousel-buttons
     width: 60px
     margin: 28px auto
